--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1932,7 +1932,7 @@ header .logo a {
 .popup-modal .link-box {
 	width: 100%;
 	overflow: hidden;
-	background: #000000;
+	background: #FF0077;
 }
 .popup-modal .link-box a {
 	font-family: "poppins-bold", sans-serif;
